# finalproject

./: CMakeLists.txt
assignments/GPR-200FinalProject/: CMakeLists.txt
assignments/GPR-200FinalProject/assets/: defaultLit.vert
assignments/assignment7_lighting/: CMakeLists.txt  main.cpp  terrainMain.cpp
assignments/assignment7_lighting/assets/: Waterfrag.frag  Watervert.vert  defaultLit.frag  defaultLit.vert  skybox.frag  skybox.vert
core/ew/: camera.h  cameraController.h  shader.cpp  shader.h
